# ExplainableEngine

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  cloudbuild.yaml  docker-compose.yml  go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
cmd/server/: main.go
dashboard/: Dockerfile  package-lock.json  package.json
dashboard/src/: middleware.ts
docs/: api-contract.yaml  architecture.md  product-spec.md  sprint-1-plan.md
docs/dashboard/: architecture.md  design-system.md  product-strategy.md  sprint-roadmap.md  user-stories.md  ux-redesign.md
infra/: README.md
infra/terraform/: cloudrun.tf  database.tf  network.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
internal/aip/: client.go  transformer.go  transformer_test.go  types.go
internal/api/: aip.go  api_aip_test.go  api_list_test.go  api_llm_test.go  api_sprint2_test.go  api_sprint3_graph_test.go  api_sprint3_whatif_test.go  api_sprint4_narrative_test.go  api_test.go  explain.go  graph.go  llm.go  narrative.go  router.go  whatif.go
internal/engine/: breakdown.go  breakdown_test.go  confidence.go  confidence_test.go  dependency.go  dependency_test.go  drivers.go  drivers_test.go  graph.go  graph_test.go  interfaces.go  missing.go  missing_test.go  narrative.go  narrative_test.go  orchestrator.go  orchestrator_test.go  sensitivity.go  (+3 more)
migrations/: 001_create_explanations.down.sql  001_create_explanations.up.sql  002_add_indexes.down.sql  002_add_indexes.up.sql  embed_test.go
scripts/: smoke-test.sh
tests/: conftest.py  test_models.py
(+119 files in other folders)
